--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "maath": "^0.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.12.1",
+    "react-router-dom": "^6.13.0",
     "react-tilt": "^1.0.2",
     "react-vertical-timeline-component": "^3.6.0"
   },
@@ -27,10 +27,13 @@
     "@typescript-eslint/eslint-plugin": "^5.59.0",
     "@typescript-eslint/parser": "^5.59.0",
     "@vitejs/plugin-react-swc": "^3.0.0",
+    "autoprefixer": "^10.4.14",
     "eslint": "^8.38.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
+    "postcss": "^8.4.24",
     "tailwindcss": "^3.3.2",
+    "ts-standard": "^12.0.2",
     "typescript": "^5.0.2",
     "vite": "^4.3.9"
   }
